# SIFT

./: .clang-format  .clangd  .gitignore  BUILD.md  CMakeLists.txt  PRESETS.md  README.md  TECHNICAL.md  USAGE.md  autocc.base.json  autocc.toml  siftAPI.hpp
asm/: 3np1.asm  aesDEC.asm  aesENC.asm  avx.asm  branch.asm  cache.asm  diskWrite.asm  flood.asm  primes.asm  render.asm  sha256.asm
include/: config.hpp  core.hpp  logger.hpp  menu.hpp  pcg_uint128.hpp  spinner.hpp
include/tui/: tui.h
presets/: full.cfg  gaming.cfg
src/: lzma.module.cpp  main.cpp  mainCLI.cpp  mainOld.cpp  systemMonitor.manage.cpp
